# Autonomous-Agentic-Spiritual-AI

./: .env.example  .gitignore  CLAUDE.md  FILE_TREE.md  README.md  cagent-spiritual-team.yaml  docker-compose.ollama.yaml  docker-compose.vllm.yaml  docker-compose.yaml  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
Film-Agent/: .env.example  .gitlab-ci.yml  README.md  docker-compose.yaml  requirements.txt
Film-Agent/backend/: main.py  nvidia_api.py  requirements.txt
Film-Agent/docs/: AGENTS.md
Film-Agent/frontend/: app.js  index.html  styles.css
Film-Agent/src/: __init__.py
Film-Agent/src/agents/: __init__.py  cinematographer_agent.py  director_agent.py  editor_agent.py  screenwriter_agent.py  sound_designer_agent.py  vfx_agent.py
Film-Agent/src/api/: __init__.py  routes.py
Film-Agent/src/core/: __init__.py  config.py  llm_client.py
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: chat.py  health.py  sessions.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  message.py  session.py  user.py
backend/app/schemas/: chat.py  session.py  user.py
backend/app/services/agent/: __init__.py  spiritual_agent.py
backend/app/services/emotion/: __init__.py  detector.py
backend/app/services/llm/: __init__.py  client.py
backend/app/services/spiritual/: __init__.py  guidance.py
backend/tests/unit/: test_health.py
config/: config.yaml
data/prompts/: meditation_prompts.md
data/user_data/: memories.json
docs/: architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  App.tsx  BhaktiTab.jsx  bhakti-styles.css  index.css  spiritual_content.js  theme-toggle.css
frontend/src/components/chat/: ChatWindow.tsx  MessageBubble.tsx  MessageInput.tsx  (+1 more)
frontend/src/hooks/: useChat.ts
frontend/src/pages/: ChatPage.tsx  HomePage.tsx
frontend/src/services/: api.ts  chatService.ts
frontend/src/store/: authStore.ts  chatStore.ts
frontend/src/types/: chat.ts  user.ts
frontend/src/utils/: formatDate.ts
k8s/: vllm-deployment.yaml
scripts/: dev.sh
src/: __init__.py  main.py
src/core/: __init__.py  agent.py  constants.py  llm_client.py
src/dialogue/: __init__.py  conversation_handler.py
src/memory/: __init__.py  memory_manager.py
src/reasoning/: __init__.py  context_analyzer.py
src/utils/: __init__.py
(+3 files in other folders)
